[gd_scene load_steps=5 format=3 uid="uid://dxrx8t2bwjx14"]

[ext_resource type="Script" uid="uid://c1bmcpgilqtaw" path="res://scripts/interact.gd" id="1_dvhjd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cv3fr"]
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uwnah"]
transparency = 1
albedo_color = Color(0.27451, 1, 1, 0.447059)

[sub_resource type="SphereMesh" id="SphereMesh_uwnah"]
material = SubResource("StandardMaterial3D_uwnah")

[node name="interact_area" type="Area3D"]
script = ExtResource("1_dvhjd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_cv3fr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_uwnah")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
